tests/ui/closures/issue-84128.stderr
error[E0308]: mismatched types
  --> $DIR/issue-84128.rs:13:13
   |
LL |         Foo(())
   |         --- ^^ expected integer, found `()`
   |         |
   |         arguments to this struct are incorrect
   |
help: the type constructed contains `()` due to the type of the argument passed
  --> $DIR/issue-84128.rs:13:9
   |
LL |         Foo(())
   |         ^^^^--^
   |             |
   |             this argument influences the type of `Foo`
note: tuple struct defined here
  --> $DIR/issue-84128.rs:5:8
   |
LL | struct Foo<T>(T);
   |        ^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
